fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ margin: auto;
 }
 
 ul {
-    width: 300px;
+    width: 280px;
 }
 }
 
